Fixing "available" being cut off in floorplan grid

--- a/css/floorplan-archive-defaults/_floorplan-grid-defaults.scss
+++ b/css/floorplan-archive-defaults/_floorplan-grid-defaults.scss
@@ -83,15 +83,17 @@
 		line-height: 1.2;
 	}
 
-	h3,
-	p {
-		margin-bottom: 15px;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		display: -webkit-box;
-		-webkit-line-clamp: 1; /* number of lines to show */
-		line-clamp: 1;
-		-webkit-box-orient: vertical;
+	.floorplan-content {
+		h3,
+		p {
+			margin-bottom: 15px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			display: -webkit-box;
+			-webkit-line-clamp: 1; /* number of lines to show */
+			line-clamp: 1;
+			-webkit-box-orient: vertical;
+		}
 	}
 
 	.floorplan-attributes {
